--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script src="app.js"></script>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/raphael.min.js"></script>
+    <script src="js/flowchart.min.js"></script>
+    <script src="js/app.js" defer></script>
     <title>Art of debugging</title>
 </head>
 <body>
@@ -18,7 +20,7 @@
         </div>
     </nav>   
      <div class="content">
-        DIAGRAM
-     </div>
+        <div id="diagram"></div>
+    </div>
 </body>
 </html>
