--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
         </div>
     </nav>   
      <div class="content">
-        <div id="diagram"></div>
+        <div id="diagram"></div>`
+        <div id="explanation">
+            <p>Dit is een uitleg!!</p>
+        </div>
     </div>
 </body>
 </html>
