--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <script type="text/javascript" src="js/explanation.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.1.slim.js"></script>
     <script src="js/raphael.min.js"></script>
     <script src="js/flowchart.min.js"></script>
     <script src="js/app.js" defer></script>
@@ -22,7 +24,6 @@
      <div class="content">
         <div id="diagram"></div>`
         <div id="explanation">
-            <p>Dit is een uitleg!!</p>
         </div>
     </div>
 </body>
