--- a/html/foutmelding.html
+++ b/html/foutmelding.html
@@ -1,5 +1,5 @@
 <h1>Foutmelding</h1>
-Er zijn verschillende soort foutmeldingen
+<p>Er zijn verschillende soort foutmeldingen</p>
 
 <ul>
     <li>Console foutmelding</li>
@@ -7,8 +7,8 @@ Er zijn verschillende soort foutmeldingen
 </ul>
 
 <h2>Console foutmelding</h2>
-Een console fout vind je in de ontwikkel tools van je browser.
-F12 -> console
+<p>Een console fout vind je in de ontwikkel tools van je browser.
+F12 -> console</p>
 
 <h2>HTTP foutmelding</h2>
-Een HTTP foutmelding vind je in de http server response. <br>Voorbeelden zijn 404, of 405.
+<p></p>Een HTTP foutmelding vind je in de http server response. <br>Voorbeelden zijn 404, of 405.
